--- a/api/manifest.json
+++ b/api/manifest.json
@@ -113,7 +113,7 @@
 "name":"ASTRO SUPERSPORT 4",
 "categories":["SPORTS"],
 "url":"https://donelfantastic.github.io/live/web/my/ass63598.m3u8",
-"logo":"https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/241_144.png"",
+"logo":"https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/241_144.png",
 "country":"MY"
 }
 ]
