--- a/api/manifest.json
+++ b/api/manifest.json
@@ -4,7 +4,7 @@
 "id":"skyS1.nz",
 "name":"SKYSPORT 1",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73125.m3u8",
+"url":"nz/ssnz73125.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_1_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -13,7 +13,7 @@
 "id":"skyS2.nz",
 "name":"SKYSPORT 2",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73126.m3u8",
+"url":"nz/ssnz73126.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_2_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -22,7 +22,7 @@
 "id":"skyS3.nz",
 "name":"SKYSPORT 3",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73127.m3u8",
+"url":"nz/ssnz73127.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_3_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -31,7 +31,7 @@
 "id":"skyS4.nz",
 "name":"SKYSPORT 4",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73128.m3u8",
+"url":"nz/ssnz73128.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_4_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -40,7 +40,7 @@
 "id":"skyS5.nz",
 "name":"SKYSPORT 5",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73129.m3u8",
+"url":"nz/ssnz73129.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_5_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -49,7 +49,7 @@
 "id":"skyS6.nz",
 "name":"SKYSPORT 6",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73130.m3u8",
+"url":"nz/ssnz73130.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_6_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -58,7 +58,7 @@
 "id":"skyS7.nz",
 "name":"SKYSPORT 7",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73131.m3u8",
+"url":"nz/ssnz73131.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_7_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -67,7 +67,7 @@
 "id":"skyS8.nz",
 "name":"SKYSPORT 8",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73132.m3u8",
+"url":"nz/ssnz73132.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_8_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -76,7 +76,7 @@
 "id":"skyS9.nz",
 "name":"SKYSPORT 9",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/nz/ssnz73133.m3u8",
+"url":"nz/ssnz73133.m3u8",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_9_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -85,7 +85,7 @@
 "id":"astroSS1.my",
 "name":"ASTRO SUPERSPORT 1",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/my/ass63112.m3u8",
+"url":"my/ass63112.m3u8",
 "logo":"https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/154_144.png",
 "country":"MY"
 }, 
@@ -94,7 +94,7 @@
 "id":"astroSS2.my",
 "name":"ASTRO SUPERSPORT 2",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/my/ass63113.m3u8",
+"url":"my/ass63113.m3u8",
 "logo":"https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/138_144.png",
 "country":"MY"
 }, 
@@ -103,7 +103,7 @@
 "id":"astroSS3.my",
 "name":"ASTRO SUPERSPORT 3",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/my/ass63114.m3u8",
+"url":"my/ass63114.m3u8",
 "logo":"https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/164_144.png",
 "country":"MY"
 },
@@ -112,7 +112,7 @@
 "id":"astroSS4.my",
 "name":"ASTRO SUPERSPORT 4",
 "categories":["SPORTS"],
-"url":"https://donelfantastic.github.io/live/web/my/ass63598.m3u8",
+"url":"my/ass63598.m3u8",
 "logo":"https://divign0fdw3sv.cloudfront.net/Images/ChannelLogo/contenthub/241_144.png",
 "country":"MY"
 }
